--- a/zhixue-uni/uni.scss
+++ b/zhixue-uni/uni.scss
@@ -32,7 +32,7 @@ $uni-bg-color: #ffffff;
 $uni-bg-color-grey: #f8f8f8;
 $uni-bg-color-hover: #f1f1f1; //点击状态颜色
 $uni-bg-color-mask: rgba(0, 0, 0, 0.4); //遮罩颜色
-
+$uni-bg-color-page: #f5f5f5; // 页面背景色
 /* 边框颜色 */
 $uni-border-color: #c8c7cc;
 
@@ -74,3 +74,25 @@ $uni-color-subtitle: #555555; // 二级标题颜色
 $uni-font-size-subtitle: 36upx;
 $uni-color-paragraph: #3f536e; // 文章段落颜色
 $uni-font-size-paragraph: 30upx;
+
+// 智旭小程序主题色
+$zx-topic-color:#07c160;
+// 单行文本超出打点显示
+@mixin wy-ellipsis {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+// 内容盒
+@mixin content-box {
+	box-sizing: content-box;
+}
+// 填充盒
+@mixin padding-box {
+	box-sizing: padding-box;
+}
+// 边框盒
+@mixin border-box {
+ 	box-sizing: border-box;
+}
