静态界面实现完毕

--- a/zhixue-uni/uni.scss
+++ b/zhixue-uni/uni.scss
@@ -96,3 +96,10 @@ $zx-topic-color:#07c160;
 @mixin border-box {
  	box-sizing: border-box;
 }
+
+// 
+@mixin init-style {
+	width: 100%;
+	min-height: 100vh;
+	@include border-box;
+}
